# tinyexpr

./: .travis.yml  CMakeLists.txt  README.md
examples/: CMakeLists.txt  example.c  example2.c  example3.c  repl.c
include/tinyexpr/: tinyexpr.hpp
src/: tinyexpr.c
tests/: CMakeLists.txt  benchmark.c  smoke.c
